<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBoardBpi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvApproximatelySign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_approximate_sign"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvBoardBpi"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constrainedWidth="true"
        android:visibility="gone"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvShowResultCalculating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="16,000"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="@+id/etInputAmount"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/etInputAmount"
        app:layout_constraintTop_toBottomOf="@id/rvBoardBpi"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constrainedWidth="true"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEnding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_currency_btc"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/tvShowResultCalculating"
        app:layout_constraintTop_toBottomOf="@id/rvBoardBpi"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constrainedWidth="true"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Compare to BTC: "
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvBoardBpi"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etInputAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:layout_constrainedWidth="true"
        android:inputType="numberDecimal|numberSigned"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivDelete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@id/etInputAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etInputAmount"
        app:layout_constraintBottom_toBottomOf="@id/etInputAmount"
        app:srcCompat="@drawable/ic_baseline_delete_24"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUSD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_currency_usd"
        app:layout_constraintEnd_toStartOf="@+id/btnGBP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etInputAmount"
        android:background="@drawable/bg_rectangle_purple_round_coner"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGBP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_currency_gbp"
        app:layout_constraintEnd_toStartOf="@+id/btnEUR"
        app:layout_constraintStart_toEndOf="@+id/btnUSD"
        app:layout_constraintTop_toBottomOf="@id/etInputAmount"
        android:background="@drawable/bg_rectangle_purple_round_coner"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEUR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_currency_eur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGBP"
        app:layout_constraintTop_toBottomOf="@id/etInputAmount"
        android:background="@drawable/bg_rectangle_purple_round_coner"/>


</androidx.constraintlayout.widget.ConstraintLayout>